# SIGMOD-TemporalJoin

./: .gitignore  CMakeLists.txt  Justfile  README.md  container.def  data_generator.py  data_loader.h  example-spec.json  genericjoin.py  input.txt  interval_tree.h  main.cpp  memory_bar.py  mymain.cpp  plot.py  solution.cpp  solution.h  subgraph_match.txt  tables.h  time_bar.py  triangle.sql  utility.cpp  utility.h
data/: flightgraph-dedup.csv
data/test-db/: R1_AB.txt  (+4 more)
data/test-db-cyclic/: R1_AB.txt  R2_BC.txt  R3_AC.txt
exp_output/: dblp-3-star-join.out  dblp-4-star-join.out  dblp-inproceedings-line-3-join-v2.out  dblp-inproceedings-line-3-join.out  dblp-inproceedings-star-3-join-v2.out  dblp-inproceedings-star-3-join.out  dblp-line-3-counting.out  dblp-line-3-join-v2.out  dblp-line-3-join-v3.out  dblp-line-3-join-v4.out  dblp-line-3-join-v5.out  dblp-line-3-join.out  dblp-line-6-counting.out  dblp-line-6-join-v2.out  dblp-line-6-join-v3.out  dblp-line-6-join.out  dblp-line-9-counting.out  dblp-line-9-join.out  dblp-star-3-join-v2.out  dblp-star-3-join-v3.out  dblp-star-3-join-v4.out  dblp-star-3-join-v5.out  dblp-star-3-join.out  dblp-star-4-join-v2.out  dblp-star-4-join-v3.out  dblp-star-4-join.out  dblp-star-5-join-v2.out  dblp-star-5-join-v3.out  dblp-star-5-join.out  dblp-star-6-join-v2.out  dblp-star-6-join-v3.out  dblp-star-6-join-v4.out  dblp-star-6-join.out  syn-line-counting-output-vary-tau-1M.out  syn-line-output-vary-tau-1M.out  syn-line-output.txt  syn-star-output-vary-tau-1M.out  syn-star-output-vary-tau.out  syn-star-output.txt  tpc-star-3-join-2.out  (+9 more)
(+9 files in other folders)
